# trade-engine

./: Cargo.toml  Dockerfile.local  README.md
future_orderbook/: Cargo.toml
future_orderbook/src/: future_margin.rs  future_order.rs  future_order_side.rs  future_order_tree.rs  future_order_type.rs  future_pair.rs  future_price.rs  future_price_level.rs  lib.rs
future_orderbook/tests/: future_margin_test.rs  future_order_test.rs  future_order_tree_test.rs  future_orderbook_test.rs  future_price_level_test.rs
orderbook/: Cargo.toml
orderbook/src/: lib.rs  order.rs  order_action.rs  order_data.rs  order_side.rs  order_tree.rs  order_type.rs  pair.rs  price.rs  price_level.rs  price_tree.rs  trade.rs
orderbook/tests/: order.rs  order_test.rs  orderbook_data_test.rs  orderbook_test.rs  price_level_test.rs  price_test.rs  trade_test.rs
orderbook_derive/: Cargo.toml
orderbook_derive/src/: lib.rs
server/: Cargo.toml  build.rs  librdkafka.config
server/proto/: order.proto  orderbook.proto  request.proto  trade.proto
server/src/: consumer.rs  lib.rs  main.rs  utils.rs
server/static/: order.rs  orderbook.rs  request.rs  trade.rs
server/tests/: protobuf_test.rs
