[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orderbook = { version = "0.1.0", path = "../orderbook" }
tracing-subscriber = "0.3"
tracing = "0.1.30"
axum = "0.4.5"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.53"
