[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orderbook = { version = "0.1.0", path = "../orderbook" }
# tracing-subscriber = "0.3"
# tracing = "0.1.30"
# axum = "0.4.5"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.53"
rdkafka = { version = "0.28", features = ["cmake-build"] }
futures = "0.3.21"
clap = { version = "3.1.6", features = ["derive"] }
prost = "0.9.0"
tonic = "0.6.2"
log = "0.4.14"

[build-dependencies]
tonic-build = "0.6.2"
